--- a/templates/AboutMe.html
+++ b/templates/AboutMe.html
@@ -73,7 +73,7 @@
 <div class="lg:col-span-5 flex flex-col gap-6">
 <div class="relative w-full aspect-[4/5] rounded-2xl overflow-hidden group">
 <div class="absolute inset-0 bg-gray-200 animate-pulse" data-alt="Professional portrait of a developer in a modern office setting"></div>
-<img alt="Alex Portrait" class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-105" data-alt="Professional portrait of a male developer smiling confidently" src="/images/aboutme.png"/>
+<img alt="Alex Portrait" class="h-full w-full object-cover transition-transform duration-700 group-hover:scale-105" data-alt="Professional portrait of a male developer smiling confidently" src="../images/aboutme.png"/>
 <!-- Decorative element -->
 <div class="absolute -bottom-6 -right-6 -z-10 h-full w-full rounded-2xl border-2 border-primary/20 dark:border-primary/20 hidden lg:block"></div>
 </div>
@@ -211,4 +211,5 @@
 </div>
 </footer>
 </div>
+
 </body></html>
